Small changes to formatting and wording

--- a/Unit 1 - First Steps on Jupyter.ipynb
+++ b/Unit 1 - First Steps on Jupyter.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Data Objects\n",
     "\n",
-    "Welcome to Jupyter! The word itself is an amalgamation of Julia, Python and R and is a cell-based programming environment. Furthermore, it’s very easy to learn, read and maintain. Previously, the Spyder interpreter was used, but with Jupyter notebooks blocks of code can be executed separately (which makes debugging much easier too)! \n",
+    "Welcome to Jupyter! The word itself is an amalgamation of Julia, Python and R and is a cell-based programming environment. Furthermore, it’s very easy to learn, read and maintain. Previously, the Spyder editor was used, but with Jupyter notebooks blocks of code can be executed separately (which makes debugging much easier too)! \n",
     "\n",
-    "Blocks of text such as this one offer explanations and help. These are written in _Markdown_. Be sure to click around on these cells to see the hidden formatting syntax.\n",
+    "Blocks of text such as this one offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). Be sure to click around on these cells to see the hidden formatting syntax.\n",
     "\n",
-    "#### Contents:\n",
+    "## Contents:\n",
     "1. [Simple math](#math)\n",
     "    * Mathematical operations\n",
     "    * Importing a module\n",
@@ -74,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "17//3  # But you can still force it"
@@ -136,7 +134,7 @@
    "source": [
     "If you don't want to keep typing the name of a module, you can rename it, or simply import the functions you require (but remember to stay consistent). Note if you open a new notebook, you will have to import all the modules you would like to use again.\n",
     "\n",
-    "Furthermore, wildcard imports (`from module import \\*`) should be avoided, as they make it unclear which names are present in the namespace, confusing both readers and many automated tools."
+    "Furthermore, wildcard imports (`from module import *`) should be avoided, as they make it unclear which names are present in the namespace, confusing both readers and many automated tools."
    ]
   },
   {
@@ -147,7 +145,7 @@
    "source": [
     "from math import log10, log, e, pi, sin\n",
     "\n",
-    "print( log10(1000) )\n",
+    "print(log10(1000))\n",
     "log(e)"
    ]
   },
@@ -188,7 +186,7 @@
    "outputs": [],
    "source": [
     "dir(math)\n",
-    "# The magic functions like __name__ are pronounced \"dunder name\".  \n",
+    "# The special functions like __name__ are pronounced \"dunder name\". Dunder is short for \"double underscore\" \n",
     "# These are used when you write your own classes/modules (excluded from this tutorial)."
    ]
   },
@@ -205,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unhash this function by deleting the hash or by pressing ctrl+?. Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or varaibles! They will usually turn green to remind you)**. \n",
+    "Unhash this function by deleting the hash or by pressing ctrl+/. Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or varaibles! They will usually turn green to remind you)**. \n",
     "\n",
     "Type quit after you're done. If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menubar, under Kernel, press Restart (all varaible assignments will be undone)."
    ]
@@ -248,9 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# help(log)"
@@ -282,7 +278,7 @@
     "Online help is also available. Use the following links and books as futher reading:\n",
     "-  https://docs.python.org/3.7/tutorial/, the official tutorial by Guido van Rossum\n",
     "-  https://en.wikibooks.org/wiki/Non-Programmer%27s_Tutorial_for_Python_3\n",
-    "-  http://chemeng.up.ac.za/wiki/index.php/Python by Carl Sandrock\n",
+    "-  By Carl Sandrock: [Python page on the wiki](http://chemeng.up.ac.za/wiki/index.php/Python), [ChemEng cookbook](https://github.com/alchemyst/chemengcookbook)\n",
     "-  Introduction to programming for engineers using Python by Logan Page, Daniel Wilke, and Schalk Kok\n",
     "-  Introduction to Python for Computational Science and Engineering by Hans Fanghor\n",
     "\n",
@@ -546,9 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g.split('s')"
@@ -661,9 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print( min(lys2) )\n",
@@ -812,9 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "list(range(10)) # the start and interval are inferred"
@@ -1017,9 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Pi=%5.2f\" % pi) \n",
@@ -1030,9 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sqr2 = 2.0e5**0.5 # scientific notation works with both e and E\n",
