Attempt to update unit 1 & 2
I'm not sure if this will work

--- a/Unit 1 - First Steps on Jupyter.ipynb
+++ b/Unit 1 - First Steps on Jupyter.ipynb
@@ -38,23 +38,54 @@
     "\n",
     "### Mathematical operations \n",
     "\n",
-    "Now let's see how the coding works. The very last output of cell will automatically be printed. To see prior outputs, use the `print()` function. Use Shift+Enter as a Run shortcut. Use the hash symbol before comments."
+    "Now let's see how the coding works. Use `*` for multiplication and `**` for exponentiation.\n",
+    "\n",
+    "The very last output of cell will automatically be printed. To see prior outputs, use the `print()` function. Use Shift+Enter as a Run shortcut. Use the hash symbol before comments."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5 + 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "50 - 3\n",
     "print(3*2)\n",
@@ -63,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.666666666666667"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Integer division is no longer a problem in Python 3\n",
     "17/3"
@@ -73,27 +115,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "17//3  # But you can still force it"
+    "17//3  # But you can still force integer division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "17%3 # If you want the remainder of a division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-f84ab820532c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpi\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pi' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pi"
    ]
@@ -109,19 +185,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "math.pi"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Let's calculate $ \\sin(1) + \\cos(2) $:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4253241482607541"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Trigonometric functions use radians by default\n",
+    "math.sin(1) + math.cos(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4253241482607541"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = math.sin(1) \n",
     "b = math.cos(2)\n",
@@ -139,9 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from math import log10, log, e, pi, sin\n",
     "\n",
@@ -158,9 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5984721441039564"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math as m\n",
     "m.sin(2.5)"
@@ -181,9 +336,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'acos',\n",
+       " 'acosh',\n",
+       " 'asin',\n",
+       " 'asinh',\n",
+       " 'atan',\n",
+       " 'atan2',\n",
+       " 'atanh',\n",
+       " 'ceil',\n",
+       " 'copysign',\n",
+       " 'cos',\n",
+       " 'cosh',\n",
+       " 'degrees',\n",
+       " 'e',\n",
+       " 'erf',\n",
+       " 'erfc',\n",
+       " 'exp',\n",
+       " 'expm1',\n",
+       " 'fabs',\n",
+       " 'factorial',\n",
+       " 'floor',\n",
+       " 'fmod',\n",
+       " 'frexp',\n",
+       " 'fsum',\n",
+       " 'gamma',\n",
+       " 'gcd',\n",
+       " 'hypot',\n",
+       " 'inf',\n",
+       " 'isclose',\n",
+       " 'isfinite',\n",
+       " 'isinf',\n",
+       " 'isnan',\n",
+       " 'ldexp',\n",
+       " 'lgamma',\n",
+       " 'log',\n",
+       " 'log10',\n",
+       " 'log1p',\n",
+       " 'log2',\n",
+       " 'modf',\n",
+       " 'nan',\n",
+       " 'pi',\n",
+       " 'pow',\n",
+       " 'radians',\n",
+       " 'remainder',\n",
+       " 'sin',\n",
+       " 'sinh',\n",
+       " 'sqrt',\n",
+       " 'tan',\n",
+       " 'tanh',\n",
+       " 'tau',\n",
+       " 'trunc']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(math)\n",
     "# The special functions like __name__ are pronounced \"dunder name\". Dunder is short for \"double underscore\" \n",
@@ -192,10 +414,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'math'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# This just returns the module's name\n",
     "math.__name__"
    ]
   },
@@ -205,7 +439,9 @@
    "source": [
     "Unhash this function by deleting the hash or by pressing ctrl+/. Type _keywords_ in the search box, and scan through the list of words **(Never use these names for files, modules, functions or varaibles! They will usually turn green to remind you)**. \n",
     "\n",
-    "Type quit after you're done. If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menubar, under Kernel, press Restart (all varaible assignments will be undone)."
+    "Type quit after you're done. \n",
+    "\n",
+    "<span style=\"color:red\"> **Warning:** </span> If there's still an asterisk in the status box after you're done, it means that the cell is still busy. At the top notebook menubar, under Kernel, press Restart (all varaible assignments will be undone)."
    ]
   },
   {
@@ -316,7 +552,10 @@
     "\n",
     "### Assigning variables\n",
     "\n",
-    "Now that you're comfortable with basic mathematical operations, let's investigate using variable names. Firstly consider how the value of b is overriden below. Secondly note how there is **no asterisk** needed for the complex number. Thirdly note that a boolean can have a numerical value (e.g. `False = 0` and `True = 1`).\n",
+    "Now that you're comfortable with basic mathematical operations, let's investigate using variable names. \n",
+    "- Firstly consider how the value of b is overriden below. \n",
+    "- Secondly note how there is **no asterisk** needed for the complex number. \n",
+    "- Thirdly note that a boolean can have a numerical value (e.g. `False = 0` and `True = 1`).\n",
     "\n",
     "The PEP8 variable naming conventions are available here: http://www.python.org/dev/peps/pep-0008/ (i.e. names should be at least 3 characters, descriptive and lowercase). Both Python and Ruby recommend UpperCamelCase for class names, CAPITALIZED_WITH_UNDERSCORES for constants, and lowercase_separated_by_underscores for other names.\n",
     "\n",
@@ -336,8 +575,8 @@
     "d = True # boolean\n",
     "\n",
     "print(a + b)\n",
-    "print(b+c)\n",
-    "print(d-1)"
+    "print(b + c)\n",
+    "print(d - 1)"
    ]
   },
   {
@@ -549,12 +788,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's say I want to replace the letter e with the letter f in string `g`. What's wrong here?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What's wrong here?\n",
     "g.replace(e, f)"
    ]
   },
@@ -584,14 +829,46 @@
    "source": [
     "### Tuples\n",
     "\n",
-    "These are immutable sequences (pronounced \"tuppels\"), chracterised by round brackets. They enable tuple packing (multiple assignments to a single varaible) and tuple unpacking."
+    "These are immutable sequences (pronounced \"tuppels\"). Note that it is actually the comma which makes a tuple, not the parentheses. The parentheses are optional, except in the empty tuple case, or when they are needed to avoid syntactic ambiguity. They enable tuple packing (multiple assignments to a single varaible) and tuple unpacking."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1, 2, 3\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35, 36, 37, 38, 'last', 45, 46, 47, 48)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "foo = (35, 36, 37, 38, 'last')\n",
     "# it also works without parentheses\n",
@@ -602,12 +879,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(type( () ))\n",
-    "print(type( (42, ) ))"
+    "b = 1,\n",
+    "type(b)"
    ]
   },
   {
@@ -658,9 +946,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print( min(lys2) )\n",
-    "print( max(lys2) )\n",
-    "print( len(lys2) )"
+    "print(min(lys2))\n",
+    "print(max(lys2))\n",
+    "print(len(lys2))"
    ]
   },
   {
@@ -991,7 +1279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"ten=%d twenty=%d\" % (10,20))"
+    "print(\"ten=%d twenty=%d\" % (10, 20))"
    ]
   },
   {
@@ -1001,7 +1289,7 @@
    "outputs": [],
    "source": [
     "# Omitting the print() function will include parentheses \n",
-    "\"a=%d b=%d\" % (10,20)"
+    "\"a=%d b=%d\" % (10, 20)"
    ]
   },
   {
@@ -1024,7 +1312,7 @@
     "sqr2 = 2.0e5**0.5 # scientific notation works with both e and E\n",
     "\n",
     "print(sqr2)\n",
-    "print(round(sqr2,2))\n",
+    "print(round(sqr2, 2))\n",
     "print('')\n",
     "\n",
     "print(\"%f\" % sqr2) # floating point\n",
@@ -1075,8 +1363,8 @@
     "# add element to list\n",
     "new_list.append('a')\n",
     "\n",
-    "print('New List:', new_list )\n",
-    "print('Old List:', old_list )"
+    "print('New List:', new_list)\n",
+    "print('Old List:', old_list)"
    ]
   },
   {
