--- a/Unit 2 - Stepping up.ipynb
+++ b/Unit 2 - Stepping up.ipynb
@@ -756,6 +756,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Style guidelines\n",
+    "\n",
+    "At this point you may want to revisit the Python style guidelines. One of Guido van Rossum's key insights is that code is read much more often than it is written. The guidelines are intended to improve the readability of code and make it consistent across the wide spectrum of Python code. For instance, avoid using extraneous whitespace like `print( (1 + 2) )` - this is explicitly mentioned in [PEP 8](https://www.python.org/dev/peps/pep-0008/#pet-peeves).\n",
+    "\n",
+    "However, know when to be inconsistent -- sometimes style guide recommendations just aren't applicable. When in doubt, use your best judgment. Look at other examples and decide what looks best. And don't hesitate to ask!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
