Minor edits to Ex 1.2, 2.1 and 3.1

--- a/Unit 2 - Stepping up.ipynb
+++ b/Unit 2 - Stepping up.ipynb
@@ -33,25 +33,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10000000000000000555\n",
+      "0.20000000000000001110\n",
+      "0.29999999999999998890\n",
+      "0.40000000000000002220\n",
+      "0.50000000000000000000\n",
+      "0.59999999999999997780\n",
+      "0.69999999999999995559\n",
+      "0.80000000000000004441\n",
+      "0.90000000000000002220\n",
+      "1.00000000000000000000\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 11):\n",
-    "    print(i/10)"
+    "    y = i/10\n",
+    "    print(\"{:.20f}\".format(y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1\n",
+      "0.2\n",
+      "0.30000000000000004\n",
+      "0.4\n",
+      "0.5\n",
+      "0.6\n",
+      "0.7\n",
+      "0.7999999999999999\n",
+      "0.8999999999999999\n",
+      "0.9999999999999999\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i <= 0.9: # Always check your terminating condition\n",
-    "    i += 0.1\n",
+    "    i = i + 0.1\n",
     "    print(i)"
    ]
   },
@@ -66,24 +101,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "A = \"Hello, world!\"\n",
     "B = (2, 4, 6, 8)\n",
     "\n",
     "lys = []\n",
-    "for i in A:\n",
+    "for i in B:\n",
     "    lys.append(i)\n",
     "print(lys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: 1 has value: 1\n",
+      "Key: 2 has value: 4\n",
+      "Key: 3 has value: 9\n",
+      "Key: 4 has value: 16\n"
+     ]
+    }
+   ],
    "source": [
     "C = {1:1, 3:9, 4:16, 2:4}\n",
     "for key, val in sorted(C.items()):\n",
