Remove excess whitespace and the term 'in-place'. Add line nrs.

--- a/Unit 1 - First Steps on Jupyter.ipynb
+++ b/Unit 1 - First Steps on Jupyter.ipynb
@@ -303,6 +303,8 @@
     " - Keyboard shortcuts\n",
     " * Common modules' documentation\n",
     " \n",
+    "Under View you can Toggle Line Numbers too.\n",
+    " \n",
     "Common keyboard shortcuts: \n",
     " + Ctrl+C & Ctrl+V to copy and paste code (there is no button for this in the menubar)\n",
     " + Ctrl+Z & Ctrl+Y to undo and redo within a cell\n",
@@ -648,7 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir( () ) # Not much to see here"
+    "# dir(()) # Not much to see here"
    ]
   },
   {
@@ -858,7 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(enumerate([53, 12, 42, 97, 80], start=2) )"
+    "list(enumerate([53, 12, 42, 97, 80], start=2))"
    ]
   },
   {
@@ -957,7 +959,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B # see how that change was only 'in place' and not permanant"
+    "B # see how that change was only temporary"
    ]
   },
   {
@@ -966,7 +968,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir( () )"
+    "# dir(())"
    ]
   },
   {
@@ -1012,7 +1014,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir( {} )"
+    "# dir({})"
    ]
   },
   {
@@ -1021,10 +1023,28 @@
    "source": [
     "### Formatted printing\n",
     "\n",
-    "These data sequences can be used to specify the number of decimal digits when printing. The overall structure involves a string containing format speciﬁers (a %-sign and a letter), followed by a %-sign and a tuple that contains the variables to be printed in place of the format speciﬁers. The letter can be: d, e, f, g, r, or s (see which format it specifies below). \n",
+    "These data sequences can be used to specify the number of decimal digits when printing. The overall structure involves a string containing format speciﬁers (a %-sign and a letter), followed by a %-sign and a tuple that contains the variables to be printed instead of the format speciﬁers. The letter can be: d, e, f, g, r, or s (see which format it specifies below). \n",
     "\n",
     "The format speciﬁer of type %W.Df means that a float should be printed with a total width of W characters and D digits behind the decimal point."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"{} needs {} pints\".format('Peter', 4))\n",
+    "print(\"{1} pints are needed by {0}\".format('Peter', 4))\n",
+    "print(\"Pi is approximately {:6.3f}.\".format(pi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1083,16 +1103,6 @@
    "metadata": {},
    "source": [
     "However, in Python 3 a new syntax was introduced."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"{} needs {} pints\".format('Peter', 4))\n",
-    "print(\"Pi is approximately {:6.3f}.\".format(pi))"
    ]
   },
   {
