Remove % formatting. Changed comment to B being a new object

--- a/Unit 1 - First Steps on Jupyter.ipynb
+++ b/Unit 1 - First Steps on Jupyter.ipynb
@@ -959,7 +959,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B # see how that change was only temporary"
+    "B #see how that didn't change B but instead returned a new object"
    ]
   },
   {
@@ -1023,9 +1023,7 @@
    "source": [
     "### Formatted printing\n",
     "\n",
-    "These data sequences can be used to specify the number of decimal digits when printing. The overall structure involves a string containing format speciﬁers (a %-sign and a letter), followed by a %-sign and a tuple that contains the variables to be printed instead of the format speciﬁers. The letter can be: d, e, f, g, r, or s (see which format it specifies below). \n",
-    "\n",
-    "The format speciﬁer of type %W.Df means that a float should be printed with a total width of W characters and D digits behind the decimal point."
+    "Variables from the code can be printed as part of a string. The overall structure involves typing a string containing curly brackets where specific values must be placed from the `.format()` attribute. It can also be indexed."
    ]
   },
   {
@@ -1035,74 +1033,87 @@
    "outputs": [],
    "source": [
     "print(\"{} needs {} pints\".format('Peter', 4))\n",
-    "print(\"{1} pints are needed by {0}\".format('Peter', 4))\n",
-    "print(\"Pi is approximately {:6.3f}.\".format(pi))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sqr2 = 2.0e5**0.5 # scientific notation works with both e and E\n",
+    "print(\"{1} pints are needed by {0}\".format('Peter', 'Four'))\n",
     "\n",
-    "print(sqr2)\n",
-    "print(round(sqr2, 2))\n",
-    "print('')\n",
-    "\n",
-    "print(\"%f\" % sqr2) # floating point\n",
-    "print(\"%e\" % sqr2) # exponential\n",
-    "print(\"%g\" % sqr2) # shorter of %e or %f\n",
-    "print('')\n",
-    "\n",
-    "print(\"%d\" % sqr2) # integer\n",
-    "print(\"%s\" % sqr2) # output of str()\n",
-    "print(\"%r\" % sqr2) # output of repr(), which is usually a more accurate string "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"ten=%d twenty=%d\" % (10, 20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Omitting the print() function will include quotation marks \n",
-    "\"a=%d b=%d\" % (10, 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Pi = %5.2f\" % pi) \n",
-    "print(\"Pi = %10.3f\" % pi)\n",
-    "print(\"Pi = %10.8f, or if you want to be less exact Pi = %.2f\" % (pi, pi))"
+    "man = 'Peter'\n",
+    "val = 4\n",
+    "print(f\"{man} needs {val} pints\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, in Python 3 a new syntax was introduced."
+    "The number of digits and spacing can be specified using the {:W.DL} syntax, where the optional choices are\n",
+    "+ W: the total width of the value,\n",
+    "+ D: the number of decimal places, and\n",
+    "+ L: a letter specifying the type of output (for floats, it can be d, e, or f)\n",
+    "\n",
+    "If you have opened this notebook without running the cell where pi was imported, run the following cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(pi)\n",
+    "print(\"Pi is approximately {:}\".format(pi))\n",
+    "print(\"Pi is approximately {:8f}\".format(pi))\n",
+    "print(\"Pi is approximately {:f}\".format(pi))\n",
+    "print(\"Pi is approximately {:5.4f}\".format(pi))\n",
+    "print(\"Pi is approximately {:.3f}\".format(pi))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's consider $ \\sqrt{200000} $ and see effect of the different letters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqr2 = 2.0e5**0.5            # scientific notation works with both e and E\n",
+    "\n",
+    "print(sqr2)\n",
+    "print(round(sqr2, 2))\n",
+    "print(\"{:f}\".format(sqr2))   # floating point\n",
+    "print(\"{:14e}\".format(sqr2)) # exponential (the 14 aligns the decimal points)\n",
+    "print(\"{:g}\".format(sqr2))   # shorter of %e or %f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = 5.123E-3\n",
+    "f\"The value I want to see is {value:7.2}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that in Python 2 the % operator was used, in case you find such examples on the internet. \n",
+    "\n",
+    "More can be read here: https://docs.python.org/3/tutorial/inputoutput.html"
    ]
   },
   {
@@ -1167,8 +1178,8 @@
     "# edit last entry in original list  \n",
     "old[-1] = 'baz'\n",
     "\n",
-    "print('original: %r\\n list.copy(): %r\\n slice: %r\\n list(): %r\\n copy: %r\\n deepcopy: %r'\n",
-    "      % (old, a, b, c, d, e))"
+    "print(\"original: {}\\n list.copy(): {}\\n slice: {}\\n list(): {}\\n copy: {}\\n deepcopy: {}\"\n",
+    "      .format(old, a, b, c, d, e))"
    ]
   },
   {
@@ -1194,8 +1205,8 @@
     "\n",
     "old[0][0] = 'foo'\n",
     "\n",
-    "print('original: %r\\n list.copy(): %r\\n slice: %r\\n list(): %r\\n copy: %r\\n deepcopy: %r'\n",
-    "      % (old, a, b, c, d, e))"
+    "print(\"original: {}\\n list.copy(): {}\\n slice: {}\\n list(): {}\\n copy: {}\\n deepcopy: {}\"\n",
+    "      .format(old, a, b, c, d, e))"
    ]
   },
   {
